# func-queue

./: README.md  pyproject.toml  t1.py  t2.py
func_queue/mediator/: base.py
func_queue/option/: com.py  common.py
func_queue/pool_executor/: aio.py  base.py  thread.py
func_queue/producer/: base.py
func_queue/serializer/: base.py  json_ser.py  orjson_ser.py
func_queue/task/: base.py  thread.py
func_queue/utils/: encoder.py
